Initial wave of project restructure * Adopted maven-style directory structure * Moved performance tests into their own sourceSet (run with perfTest task) * Split resources and groovy into separate source paths * Changed compatibility level to 1.6 * Changed output to use the target folder * Excluded some folders from the IDEA project to keep things neat * Run is now executed on the produced jar to solve classpath issues, pending improved resource resolution